# public

./: README.md
API_2/: auth.py  config.py  main.py  requirements.txt  services.py
API_talantix/: .gitignore  (+13 more)
bitrix_downloader-master/: .env.dev  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
bitrix_downloader-master/bitrix_downloader/: __main__.py  args.py  di.py
bitrix_downloader-master/bitrix_downloader/common/entities/: base.py  bitrix.py
bitrix_downloader-master/bitrix_downloader/domains/bitrix/repositories/: bitrix.py
bitrix_downloader-master/bitrix_downloader/domains/bitrix/services/: bitrix.py
bitrix_downloader-master/bitrix_downloader/infrastructure/adapters/: bitrix.py
bitrix_downloader-master/bitrix_downloader/infrastructure/database/: __main__.py  base.py  gateway.py  tables.py  uow.py  utils.py
bitrix_downloader-master/bitrix_downloader/infrastructure/database/migrations/: env.py
bitrix_downloader-master/bitrix_downloader/infrastructure/database/migrations/versions/: 2024_07_30_e3a0322fb4ce_initial.py
bitrix_downloader-master/bitrix_downloader/infrastructure/database/repositories/: bitrix.py
bitrix_downloader-master/bitrix_downloader/presentors/scheduler/: downloader.py  service.py
bitrix_downloader-master/tests/: conftest.py
bitrix_downloader-master/tests/plugins/factories/entities/: ad_call_center.py  ad_mass_recruitment.py  ad_sng.py  ad_world.py  bitrix_mass_selection.py  bitrix_sng.py  bitrix_world.py
bitrix_downloader-master/tests/plugins/factories/tables/: ad_call_center.py  ad_mass_recruitment.py  ad_sng.py  ad_world.py  bitrix_mass_selection.py  bitrix_sng.py  bitrix_world.py
bitrix_downloader-master/tests/plugins/instances/: args.py  db.py
bitrix_downloader-master/tests/plugins/instances/repositories/: bitrix.py
bitrix_downloader-master/tests/plugins/instances/services/: bitrix.py
bitrix_downloader-master/tests/repositories/: test_bitrix.py
(+112 files in other folders)
